[gd_scene load_steps=4 format=3 uid="uid://c8jts7bt4i7p"]

[ext_resource type="Script" path="res://scenes/garden_plot.gd" id="1_81omm"]
[ext_resource type="Texture2D" uid="uid://cipwv30lu56nv" path="res://modified-assets/plant-grow-sprites/corn.png" id="2_rpaw6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iitex"]
size = Vector2(18, 18)

[node name="GardenPlot" type="Area2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_81omm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_iitex")

[node name="FarmingPlants" type="Sprite2D" parent="."]
z_index = 5
y_sort_enabled = true
position = Vector2(2.08165e-12, -12)
texture = ExtResource("2_rpaw6")
hframes = 5
frame = 3

[node name="Button" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0

[node name="StageTimer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="StageTimer" to="." method="_on_stage_timer_timeout"]
